okf/products/scalardb/3.14/scalardb-cluster/scalardb-cluster-status-codes.md
---
type: Troubleshooting
title: ScalarDB Cluster Error Codes
description: This page provides a list of error codes in ScalarDB Cluster.
resource: https://scalardb.scalar-labs.com/docs/3.14/scalardb-cluster/scalardb-cluster-status-codes/
tags:
- scalardb
- v3.14
- phase:operate
- section:troubleshoot
- edition:enterprise-standard
- edition:enterprise-premium
- unmaintained
status: deprecated
product: scalardb
product_title: ScalarDB
version: '3.14'
patch_version: 3.14.6
doc_id: scalardb-cluster/scalardb-cluster-status-codes
lifecycle_phase: operate
breadcrumb:
- Troubleshoot
- Error Codes
editions:
- Enterprise Standard
- Enterprise Premium
generated:
  by: process:okf-build/1.0.0
  at: '2026-07-28T00:57:04Z'
sources:
- id: docs-scalardb
  resource: https://github.com/scalar-labs/docs-scalardb/blob/dc5c112650d1543275b5c9de1bf3d1dd6d2d777a/versioned_docs/version-3.14/scalardb-cluster/scalardb-cluster-status-codes.mdx
  title: ScalarDB documentation source (MDX)
  author: process:scalar-labs/docs-scalardb
  last_modified: '2026-07-27T12:09:14Z'
---

# ScalarDB Cluster Error Codes

This page provides a list of error codes in ScalarDB Cluster.

## Error code classes and descriptions

| Class           | Description                               |
|:----------------|:------------------------------------------|
| `CLUSTER-1xxxx` | Errors for the user error category        |
| `CLUSTER-2xxxx` | Errors for the concurrency error category |
| `CLUSTER-3xxxx` | Errors for the internal error category    |

## `CLUSTER-1xxxx` status codes

The following are status codes and messages for the user error category.

### `CLUSTER-10000`

**Message**

```markdown
The namespace does not exist. Namespace: %s
```

### `CLUSTER-10001`

**Message**

```markdown
The table does not exist. Table: %s
```

### `CLUSTER-10002`

**Message**

```markdown
The user does not exist. User: %s
```

### `CLUSTER-10003`

**Message**

```markdown
ClusterConfig is not specified
```

### `CLUSTER-10004`

**Message**

```markdown
The get type is unspecified
```

### `CLUSTER-10005`

**Message**

```markdown
The get type is unrecognized
```

### `CLUSTER-10006`

**Message**

```markdown
The value of the column is not set. Column: %s
```

### `CLUSTER-10007`

**Message**

```markdown
The scan type is unspecified
```

### `CLUSTER-10008`

**Message**

```markdown
The scan type is unrecognized
```

### `CLUSTER-10009`

**Message**

```markdown
The order is unspecified
```

### `CLUSTER-10010`

**Message**

```markdown
The order is unrecognized
```

### `CLUSTER-10011`

**Message**

```markdown
The clustering order is unspecified
```

### `CLUSTER-10012`

**Message**

```markdown
The clustering order is unrecognized
```

### `CLUSTER-10013`

**Message**

```markdown
The put condition type is unspecified
```

### `CLUSTER-10014`

**Message**

```markdown
The put condition type is unrecognized
```

### `CLUSTER-10015`

**Message**

```markdown
The delete condition type is unspecified
```

### `CLUSTER-10016`

**Message**

```markdown
The delete condition type is unrecognized
```

### `CLUSTER-10017`

**Message**

```markdown
The operator is unspecified
```

### `CLUSTER-10018`

**Message**

```markdown
The operator is unrecognized
```

### `CLUSTER-10019`

**Message**

```markdown
The mutation is not set
```

### `CLUSTER-10020`

**Message**

```markdown
The data type is unspecified
```

### `CLUSTER-10021`

**Message**

```markdown
The data type is unrecognized
```

### `CLUSTER-10022`

**Message**

```markdown
The user option is unspecified
```

### `CLUSTER-10023`

**Message**

```markdown
The user option is unrecognized
```

### `CLUSTER-10024`

**Message**

```markdown
The privilege is unspecified
```

### `CLUSTER-10025`

**Message**

```markdown
The privilege is unrecognized
```

### `CLUSTER-10026`

**Message**

```markdown
The username is not set
```

### `CLUSTER-10027`

**Message**

```markdown
This feature is not supported in ScalarDB Cluster
```

### `CLUSTER-10028`

**Message**

```markdown
The property 'scalar.db.contact_points' must not be empty
```

### `CLUSTER-10029`

**Message**

```markdown
The property 'scalar.db.contact_points' must be prefixed with 'indirect:' or 'direct-kubernetes:'
```

### `CLUSTER-10030`

**Message**

```markdown
The format of the property 'scalar.db.contact_points' for direct-kubernetes client mode is 'direct-kubernetes:<NAMESPACE_NAME>/<ENDPOINT_NAME>' or 'direct-kubernetes:<ENDPOINT_NAME>'
```

### `CLUSTER-10031`

**Message**

```markdown
The property 'scalar.db.sql.cluster_mode.contact_points' must not be empty
```

### `CLUSTER-10032`

**Message**

```markdown
The property 'scalar.db.sql.cluster_mode.contact_points' must be prefixed with 'indirect:' or 'direct-kubernetes:'
```

### `CLUSTER-10033`

**Message**

```markdown
The format of the property 'scalar.db.sql.cluster_mode.contact_points' for direct-kubernetes client mode is 'direct-kubernetes:<NAMESPACE_NAME>/<ENDPOINT_NAME>' or 'direct-kubernetes:<ENDPOINT_NAME>'
```

### `CLUSTER-10034`

**Message**

```markdown
ClusterNodeManagerFactory is not specified
```

### `CLUSTER-10035`

**Message**

```markdown
The update condition type is unspecified
```

### `CLUSTER-10036`

**Message**

```markdown
The update condition type is unrecognized
```

### `CLUSTER-10037`

**Message**

```markdown
The two-phase commit interface is not supported
```

## `CLUSTER-2xxxx` status codes

The following are status codes and messages for the concurrency error category.

### `CLUSTER-20000`

**Message**

```markdown
The hop limit is exceeded
```

### `CLUSTER-20001`

**Message**

```markdown
A transaction associated with the specified transaction ID is not found. The transaction might have expired, or the cluster node that handled the transaction might have been restarted. Transaction ID: %s
```

## `CLUSTER-3xxxx` status codes

The following are status codes and messages for the internal error category.

### `CLUSTER-30000`

**Message**

```markdown
Getting local IP addresses failed
```

### `CLUSTER-30001`

**Message**

```markdown
Getting a cluster node object from the cache failed. Cluster Node IP Address: %s
```

### `CLUSTER-30002`

**Message**

```markdown
The ring is empty
```

### `CLUSTER-30003`

**Message**

```markdown
Getting the Kubernetes API client failed
```

### `CLUSTER-30004`

**Message**

```markdown
Reading the Kubernetes endpoint failed. Namespace: %s; Name: %s; Code: %d; Response Headers: %s; Response Body: %s
```

### `CLUSTER-30005`

**Message**

```markdown
Configuring TLS failed
```

### `CLUSTER-30006`

**Message**

```markdown
No nearest cluster nodes are found
```
