okf/products/scalardb/3.19/scalardb-cluster/scalardb-cluster-status-codes.md
---
type: Troubleshooting
title: ScalarDB Cluster Error Codes
description: This page provides a list of error codes in ScalarDB Cluster.
resource: https://scalardb.scalar-labs.com/docs/latest/scalardb-cluster/scalardb-cluster-status-codes/
tags:
- scalardb
- v3.19
- phase:operate
- edition:enterprise-standard
- edition:enterprise-premium
status: stable
product: scalardb
product_title: ScalarDB
version: '3.19'
patch_version: 3.19.1
doc_id: scalardb-cluster/scalardb-cluster-status-codes
lifecycle_phase: operate
editions:
- Enterprise Standard
- Enterprise Premium
generated:
  by: process:okf-build/1.0.0
  at: '2026-09-11T05:23:06Z'
sources:
- id: docs-scalardb
  resource: https://github.com/scalar-labs/docs-scalardb/blob/c882c4103fe6e0aedff74e7afa67c2587a78ec9b/docs/scalardb-cluster/scalardb-cluster-status-codes.mdx
  title: ScalarDB documentation source (MDX)
  author: process:scalar-labs/docs-scalardb
  last_modified: '2026-09-09T05:43:01Z'
---

# ScalarDB Cluster Error Codes

This page provides a list of error codes in ScalarDB Cluster.

## Error code classes and descriptions

| Class              | Description                               |
|:-------------------|:------------------------------------------|
| `DB-CLUSTER-1xxxx` | Errors for the user error category        |
| `DB-CLUSTER-2xxxx` | Errors for the concurrency error category |
| `DB-CLUSTER-3xxxx` | Errors for the internal error category    |

## `DB-CLUSTER-1xxxx` status codes

The following are status codes and messages for the user error category.

### `DB-CLUSTER-10000`

**Message**

```markdown
The namespace does not exist. Namespace: %s
```

### `DB-CLUSTER-10001`

**Message**

```markdown
The table does not exist. Table: %s
```

### `DB-CLUSTER-10002`

**Message**

```markdown
The user does not exist. User: %s
```

### `DB-CLUSTER-10004`

**Message**

```markdown
The get type is unspecified
```

### `DB-CLUSTER-10005`

**Message**

```markdown
The get type is unrecognized
```

### `DB-CLUSTER-10006`

**Message**

```markdown
The value of the column is not set. Column: %s
```

### `DB-CLUSTER-10007`

**Message**

```markdown
The scan type is unspecified
```

### `DB-CLUSTER-10008`

**Message**

```markdown
The scan type is unrecognized
```

### `DB-CLUSTER-10009`

**Message**

```markdown
The order is unspecified
```

### `DB-CLUSTER-10010`

**Message**

```markdown
The order is unrecognized
```

### `DB-CLUSTER-10011`

**Message**

```markdown
The clustering order is unspecified
```

### `DB-CLUSTER-10012`

**Message**

```markdown
The clustering order is unrecognized
```

### `DB-CLUSTER-10013`

**Message**

```markdown
The put condition type is unspecified
```

### `DB-CLUSTER-10014`

**Message**

```markdown
The put condition type is unrecognized
```

### `DB-CLUSTER-10015`

**Message**

```markdown
The delete condition type is unspecified
```

### `DB-CLUSTER-10016`

**Message**

```markdown
The delete condition type is unrecognized
```

### `DB-CLUSTER-10017`

**Message**

```markdown
The operator is unspecified
```

### `DB-CLUSTER-10018`

**Message**

```markdown
The operator is unrecognized
```

### `DB-CLUSTER-10019`

**Message**

```markdown
The mutation is not set
```

### `DB-CLUSTER-10020`

**Message**

```markdown
The data type is unspecified
```

### `DB-CLUSTER-10021`

**Message**

```markdown
The data type is unrecognized
```

### `DB-CLUSTER-10022`

**Message**

```markdown
The user option is unspecified
```

### `DB-CLUSTER-10023`

**Message**

```markdown
The user option is unrecognized
```

### `DB-CLUSTER-10024`

**Message**

```markdown
The privilege is unspecified
```

### `DB-CLUSTER-10025`

**Message**

```markdown
The privilege is unrecognized
```

### `DB-CLUSTER-10026`

**Message**

```markdown
The username is not set
```

### `DB-CLUSTER-10027`

**Message**

```markdown
This feature is not supported in ScalarDB Cluster
```

### `DB-CLUSTER-10028`

**Message**

```markdown
The contact points must not be empty. Property: %s
```

### `DB-CLUSTER-10029`

**Message**

```markdown
The contact points must be prefixed with 'indirect:' or 'direct-kubernetes:'. Property: %s
```

### `DB-CLUSTER-10030`

**Message**

```markdown
The format of the contact points for the direct-kubernetes mode is 'direct-kubernetes:<NAMESPACE_NAME>/<ENDPOINT_NAME>' or 'direct-kubernetes:<ENDPOINT_NAME>'. Property: %s
```

### `DB-CLUSTER-10035`

**Message**

```markdown
The update condition type is unspecified
```

### `DB-CLUSTER-10036`

**Message**

```markdown
The update condition type is unrecognized
```

### `DB-CLUSTER-10037`

**Message**

```markdown
The two-phase commit interface is not supported
```

### `DB-CLUSTER-10039`

**Message**

```markdown
The policy state is unspecified
```

### `DB-CLUSTER-10040`

**Message**

```markdown
The policy state is unrecognized
```

### `DB-CLUSTER-10041`

**Message**

```markdown
The access mode is unspecified
```

### `DB-CLUSTER-10042`

**Message**

```markdown
The access mode is unrecognized
```

### `DB-CLUSTER-10043`

**Message**

```markdown
The service does not exist. Service Class: %s
```

### `DB-CLUSTER-10044`

**Message**

```markdown
The policy does not exist. Policy: %s
```

### `DB-CLUSTER-10057`

**Message**

```markdown
The operation is not set
```

### `DB-CLUSTER-10058`

**Message**

```markdown
The batch result is not set
```

### `DB-CLUSTER-10059`

**Message**

```markdown
Resuming a transaction is not allowed when piggyback-begin is enabled
```

### `DB-CLUSTER-10060`

**Message**

```markdown
Resuming a transaction is not allowed when write-buffering is enabled
```

### `DB-CLUSTER-10061`

**Message**

```markdown
The transaction has not begun yet. This situation may occur when piggyback-begin is enabled
```

### `DB-CLUSTER-10062`

**Message**

```markdown
The transaction already exists. Transaction ID: %s
```

### `DB-CLUSTER-10063`

**Message**

```markdown
The authentication method is unspecified
```

### `DB-CLUSTER-10064`

**Message**

```markdown
The authentication method is unrecognized
```

### `DB-CLUSTER-10065`

**Message**

```markdown
Nested holder calls are not supported
```

### `DB-CLUSTER-10066`

**Message**

```markdown
No value set in the thread-local holder. Use the holder's execute method to set it.
```

### `DB-CLUSTER-10067`

**Message**

```markdown
The auth type specified in attributes is invalid. Auth type: %s
```

### `DB-CLUSTER-10068`

**Message**

```markdown
The required attribute is missing. Auth type: %s; Attribute: %s
```

### `DB-CLUSTER-10069`

**Message**

```markdown
The write type is unspecified
```

### `DB-CLUSTER-10070`

**Message**

```markdown
The write type is unrecognized
```

### `DB-CLUSTER-10071`

**Message**

```markdown
The write-set detail level is unspecified
```

### `DB-CLUSTER-10072`

**Message**

```markdown
The write-set detail level is unrecognized
```

### `DB-CLUSTER-10073`

**Message**

```markdown
The transaction ID is required for this operation but was not specified
```

### `DB-CLUSTER-10074`

**Message**

```markdown
'scalar.db.cluster.id' must be configured when 'scalar.db.cluster.node.transaction_participant.enabled' is enabled
```

### `DB-CLUSTER-10075`

**Message**

```markdown
The cluster is not configured. Cluster ID: %s; Configured clusters: %s
```

### `DB-CLUSTER-10076`

**Message**

```markdown
'scalar.db.cluster.transaction_coordinator.clusters' must be configured with at least one cluster ID
```

### `DB-CLUSTER-10077`

**Message**

```markdown
The cluster IDs in 'scalar.db.cluster.transaction_coordinator.clusters' must be unique. Duplicate cluster ID: %s
```

### `DB-CLUSTER-10078`

**Message**

```markdown
Joining a transaction is not allowed when piggyback-begin is enabled
```

### `DB-CLUSTER-10079`

**Message**

```markdown
Joining a transaction is not allowed when write-buffering is enabled
```

### `DB-CLUSTER-10080`

**Message**

```markdown
'scalar.db.cluster.id' must be configured for the cluster connection when 'scalar.db.cluster.client.transaction_coordinator.enabled' is enabled
```

### `DB-CLUSTER-10081`

**Message**

```markdown
The cluster connection is not configured, so this operation is not available. A transaction coordinator client without a cluster connection can only begin, commit, and roll back transactions
```

### `DB-CLUSTER-10082`

**Message**

```markdown
Joining a transaction is not allowed when authentication is enabled
```

### `DB-CLUSTER-10083`

**Message**

```markdown
Resuming a transaction is not allowed when authentication is enabled
```

## `DB-CLUSTER-2xxxx` status codes

The following are status codes and messages for the concurrency error category.

### `DB-CLUSTER-20000`

**Message**

```markdown
The hop limit is exceeded
```

### `DB-CLUSTER-20001`

**Message**

```markdown
A transaction associated with the specified transaction ID is not found. The transaction might have expired, or the cluster node that handled the transaction might have been restarted. Transaction ID: %s
```

### `DB-CLUSTER-20002`

**Message**

```markdown
A scanner associated with the specified scanner ID is not found. The scanner might have expired, or the cluster node that handled the scanner might have been restarted. Transaction ID: %s; Scanner ID: %s
```

### `DB-CLUSTER-20003`

**Message**

```markdown
The transaction was aborted because its authentication token was rejected during commit. The token snapshot of an in-flight transaction cannot be refreshed, so retry the transaction from the beginning
```

## `DB-CLUSTER-3xxxx` status codes

The following are status codes and messages for the internal error category.

### `DB-CLUSTER-30000`

**Message**

```markdown
Getting local IP addresses failed
```

### `DB-CLUSTER-30001`

**Message**

```markdown
Getting a cluster node object from the cache failed. Cluster Node IP Address: %s
```

### `DB-CLUSTER-30002`

**Message**

```markdown
The ring is empty
```

### `DB-CLUSTER-30003`

**Message**

```markdown
Getting the Kubernetes API client failed
```

### `DB-CLUSTER-30004`

**Message**

```markdown
Reading the Kubernetes endpoint failed. Namespace: %s; Name: %s; Code: %d; Response Headers: %s; Response Body: %s
```

### `DB-CLUSTER-30005`

**Message**

```markdown
Configuring TLS failed
```

### `DB-CLUSTER-30006`

**Message**

```markdown
No nearest cluster nodes are found
```
